{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 239,
  "lineage": "cdb0239b-fa3f-de54-7dfa-f43a64abad19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c17f42b15d1da19e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-84-127.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.84.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-nat-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:862567339542:instance/i-0cde3ce1285180b5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cde3ce1285180b5e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keypairs",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0526cce2177dd2d3e",
            "private_dns": "ip-10-0-1-57.us-east-2.compute.internal",
            "private_ip": "10.0.1.57",
            "public_ip": "3.17.79.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0145b7143796f2c31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00060c9e941ced890",
            "tags": {
              "Name": "terraform-server"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "20m"
            },
            "vpc_security_group_ids": [
              "sg-003e3aef2f87c7031"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.mysql",
            "aws_key_pair.keypair1",
            "aws_security_group.mysql",
            "aws_security_group.web",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs",
            "data.template_file.phpconfig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:internet-gateway/igw-05d35b62d552aee88",
            "id": "igw-05d35b62d552aee88",
            "owner_id": "862567339542",
            "tags": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c17f42b15d1da19e",
            "id": "nat-0d87a7b79713a04aa",
            "network_interface_id": "eni-0658ddcc9736f7256",
            "private_ip": "10.0.1.207",
            "public_ip": "3.23.84.127",
            "subnet_id": "subnet-00060c9e941ced890",
            "tags": {
              "Name": "terraform-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aa377dcc78ee9598",
            "owner_id": "862567339542",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d87a7b79713a04aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eaecede0a785cde6",
            "owner_id": "862567339542",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d35b62d552aee88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c59580cae2199c00",
            "route_table_id": "rtb-0aa377dcc78ee9598",
            "subnet_id": "subnet-0b015c594faa6dde4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060c43764b07e72c2",
            "route_table_id": "rtb-0aa377dcc78ee9598",
            "subnet_id": "subnet-032b33d3a360d6b82"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029d95b48b1743360",
            "route_table_id": "rtb-0aa377dcc78ee9598",
            "subnet_id": "subnet-0b74fbed0c35b237b"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa5e8f32a2680207",
            "route_table_id": "rtb-0eaecede0a785cde6",
            "subnet_id": "subnet-00060c9e941ced890"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc6b4f80badca46a",
            "route_table_id": "rtb-0eaecede0a785cde6",
            "subnet_id": "subnet-0b1a0d5b17925b44f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:security-group/sg-0d0f02bbfbe75322b",
            "description": "managed by terrafrom for db servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0f02bbfbe75322b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003e3aef2f87c7031"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-DBSG",
            "name_prefix": "",
            "owner_id": "862567339542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-DBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:security-group/sg-003e3aef2f87c7031",
            "description": "This is for terraforms web servers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003e3aef2f87c7031",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-webSG",
            "name_prefix": "",
            "owner_id": "862567339542",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-webSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:subnet/subnet-0b015c594faa6dde4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b015c594faa6dde4",
            "map_public_ip_on_launch": false,
            "owner_id": "862567339542",
            "tags": {
              "Name": "terraform-private-1"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:subnet/subnet-032b33d3a360d6b82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-032b33d3a360d6b82",
            "map_public_ip_on_launch": false,
            "owner_id": "862567339542",
            "tags": {
              "Name": "terraform-private-2"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:subnet/subnet-0b74fbed0c35b237b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0b74fbed0c35b237b",
            "map_public_ip_on_launch": false,
            "owner_id": "862567339542",
            "tags": {
              "Name": "terraform-private-3"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:subnet/subnet-00060c9e941ced890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00060c9e941ced890",
            "map_public_ip_on_launch": false,
            "owner_id": "862567339542",
            "tags": {
              "Name": "terraform-public-1"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:subnet/subnet-0b1a0d5b17925b44f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b1a0d5b17925b44f",
            "map_public_ip_on_launch": false,
            "owner_id": "862567339542",
            "tags": {
              "Name": "terraform-public-2"
            },
            "vpc_id": "vpc-0aa51ec4d45cc007e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862567339542:vpc/vpc-0aa51ec4d45cc007e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068e01af8742b9c94",
            "default_route_table_id": "rtb-0ab84aed163f3db78",
            "default_security_group_id": "sg-0f64cca19850c85e5",
            "dhcp_options_id": "dopt-9d4dd8f6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aa51ec4d45cc007e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab84aed163f3db78",
            "owner_id": "862567339542",
            "tags": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}